# PythonProject16.2

./: .gitignore  README.md  main.py  models.py  pyproject.toml  test_models.py
src/: __init__.py  models.py
tests/: __init__.py  test_models.py
